// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactPlaceholder renders the content when it's ready 1`] = `
Array [
  <div>
    Some ready content
  </div>,
]
`;

exports[`ReactPlaceholder renders the placeholder only after the specified delay 1`] = `
Array [
  <TextBlock
    className={undefined}
    color="#CDCDCD"
    delay={10000}
    rows={2}
    widths={
      Array [
        97,
        100,
        94,
        90,
        98,
        95,
        98,
        40,
      ]
    }
  />,
]
`;

exports[`ReactPlaceholder renders the placeholder when the content is not ready 1`] = `
Array [
  <TextBlock
    className={undefined}
    color="#CDCDCD"
    delay={0}
    rows={2}
    widths={
      Array [
        97,
        100,
        94,
        90,
        98,
        95,
        98,
        40,
      ]
    }
  />,
]
`;

exports[`build build script generates every needed file 1`] = `
Array [
  "ReactPlaceholder.d.ts",
  "ReactPlaceholder.js",
  "index.d.ts",
  "index.js",
  "placeholders/MediaBlock.d.ts",
  "placeholders/MediaBlock.js",
  "placeholders/RectShape.d.ts",
  "placeholders/RectShape.js",
  "placeholders/RoundShape.d.ts",
  "placeholders/RoundShape.js",
  "placeholders/TextBlock.d.ts",
  "placeholders/TextBlock.js",
  "placeholders/TextRow.d.ts",
  "placeholders/TextRow.js",
  "placeholders/index.d.ts",
  "placeholders/index.js",
  "reactPlaceholder.css",
]
`;
